Major theme changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,9 +1,9 @@
 Version 8.6 (October 31, 2017)	
    •Redesigned splash screen  
-   •Add Space theme
+   •Add Space & Breeze theme
    •Theme saved on shutdown
    •Tweaked multiple themes      
-   •Changed icon theme to Galaxy
+   •Changed icon theme to Breeze
 Version 8.5 (October 13, 2017)	
    •Help file included   
    •Minor changes to splash screen
