--- a/Language Pad/Notebook/NotebookEditor.resx
+++ b/Language Pad/Notebook/NotebookEditor.resx
@@ -127,146 +127,76 @@
   <data name="PageUpToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAHeSURBVEhL7VLJTkJBEMSDGgFj3OMv+BEmXtmXx77Dg4/g
-        wAfpFxgOiMEQiDFgwBguBrnq0RsyVk0abhgQjlRSeTPzuqu6e8aywQYzFIvFi3Q63c7lcs1kMnkmx+tB
-        oVA4h/hbPp9XWCus+zA6ld+rwTCMo0Qi0c1kMqpUKmlCXKGLXiwWO5Gw/yEejx9CpJNKpXTlUwPTNBXP
-        otHoC77HEr4cQqHQQTgcfkb1umIaUHhK6UJFIpEnxkraYkCCHaNpokJdKcdD8g7IbDar97gLhQ4VYtse
-        j2df0v8GqrIh4RGVKVZPUoRfCpIYnd6zA+lCoagHl8tlFZn58Pv998FgUIuSTIboCAIzQxTwgy6G7JBm
-        0oVC7p3IzAfmPmIwhfmF4LDb7canphQMBALjfr8fxpiGNKYRY7H+EJn5qNfrJgI/UQ0FRxCK1Go1O/cU
-        IrEeK6V2BoOBgRG9w1ChsK9qtVoSmfmYTCa2RqNRLJfLt6wS+108zW2fz0cRTa/XO2YsTXq9nlGpVG5a
-        rZaJ2MUuGolWBF9SgHsa4JXoMZBut1sbEIxhLLgnR8uDBnghnL2m0+mcGawFNIAoZ6/pcDjWa4AxbOE1
-        vWJM3ySebUd+rQ+Y8TUYFF7J8QarwmL5BRZBT96V6z5SAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABrSURBVEhLYxgFo2CYgdDQUH4QhnKpC0AG+/j4nABhqluC
+        ZHg/FFPPEmTDoUIMVLMEm+EwQLEl+AyHAbItIcZwGCDZElIMhwGSLPH19d1JiuEwANID0gvl4gZAhXJQ
+        JsmAEr2jYBQMGGBgAACmnkHXSMDUawAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="PageDownToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAHJSURBVEhL7VLLTsJAFCXB11o0caeJC39EY0LCq0CB8gyP
-        78D/cuEeEiFiqVAswQbd+gPteE4zww5F6U5OcsJw595z7r3TyA47rFCv1+/BT7LRaDzIcHioVqtep9MR
-        JM4in89H5VU4KJfLXrvdFmSlUhHdbndPXoUDwzC8ZrMpSJhtZwCx82Kx2MUqYjIUwX8PuxdkqVRaGeB8
-        UigU7sCLIPEnIPEyl8u9QZB7fsb5lHFd171arSZI5AQGuDsGh/yP3HecrwKR75DNZm0WcA3sFMJP6XQ6
-        BgGPj8v94yzwNZ1BcMRGMDHzBGqnUmY9Wq3WIwUozkKa0QQxn6YkhIWmaSbvmEcyhvcZSpn1WC6Xt0i0
-        lImcIiANlam65wQUx0Sz+XwelzLrIYSIuq4bR8ELRg4ESIopA2VMI+Zgda+O46RQu9mXpUzwoFOsIuhe
-        GSkylslkaLQYj8caavZl+WagiW3bSQg4FOJK2DHJleDhaeSapqkj90CW/Q7sajKZaDCZJ5PJYB1kKpXi
-        BO5oNCr8WVyBJpZlZdH5IpFICBImH/1+3/B9/1CmbQd2ORgMdKzEBme9Xq+K2JG8DgfsFqLX+L0JXfw/
-        IxL5AuCnVVy9Wa4UAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABgSURBVEhLYxgFo2AUYAIfH5+Vvr6+TlAu0QCkB6QXysUN
+        QAqB+DUplpCshxQNpKhFAcRoJEYNXoDPAHxyJAFsBmETowggG4jMhkpTByAZTH3DYQBqCW0MHwWjYKAA
+        AwMAnGs/ZeMhaMoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="AddToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAJNSURBVEhL7ZHda1JxGMcPdF+wEQURQf9CdWU3IyoHq21a
-        eGE3ayY1YzNLyyGI0qAYFRHVTFyZ7si6GGtQ9La1sS4Cq8XmmlsTxaMe31/wou6+ned42Bh2oXUuuuiB
-        Dw+/5+Lz5Xl+zP/6N0qr1ZpsNtsTOSGnpGcYp9PJQuYip6RnGIfDwVarVZTLZVkgFzkl/WZAqVSShd8G
-        VCoVFAoFWSDXlgC73c7Savl8XhbIRU5JzzDCr7PFYhHZbFYWyEVOSV8LoNUymYwskKsugFbjeV4WyFUX
-        kMvlkEqlmmYscAde1gpfwCb0QQTG74FcWwKsVitLqyUSiaYZ9ZtQ+jGB8s9JsY/6zeKZyCnpawHpdBoc
-        xzWN+6kRfPUR1gt6pKtueHwmkKsugG4Xj8cbwuO7gfuePjx8bIB7TINo4TpCaa3Qh+Dya+Dy9sN47XC0
-        4/SeSxsByWQSsVisIe669QhGdVjgzmMx2YcQb8BnrgvL/EUspQz4mriAYEyHc5f3+zYC6J7RaLQhbo/o
-        MBtWY3rlCObWjmH++3F8WFdiXoDeM+GjmFs9hbPGfbUAi8XC0uqRSKQhhh/04NViB94tn8TMShdmV1V4
-        u9wm9vfhbkx/68TrpRM4M7B3M4A+plHc3iHcGukVNxl2t+NNSIWpLwqx33S1i3PdwMFYW2frFTFAo9EM
-        ms3mqT9BECVfLHRj/OMhvBR6T/8BjubkFOVSbRNoEWhtFrV+18RkUIXnn9Qiqt7dz4Q5ucj596VQbr+q
-        0u8M1GgJKJQ7amcRi2F+AbaZNBSpvGReAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABjSURBVEhLYxgFIxD4+vr+pwRDjcENgIr+QZmkAsZRCwiB
+        oW8BSO8Qt4AoAHIFGiZooezMz4RdDgNAAxtoagEIoFmC0wKQwegYKkUYIFlCfR/AAJIlGBiqBAzItmAU
+        DAfAwAAA7Kd+UDky0QkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="RemoveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAIMSURBVEhL7ZK/TxphGMdffi0OxJRFURYnNVGjAwOJowN/
-        AUmZmzZppyZHgqFcYSGtrDq46HQa26lDF5Z26FAHq1hBcxKQ33Bw/NL58XleLhIiw5GciYNP8kku7/fy
-        +fK8B3uZ5zF+v/9jKBTaNxJyanrGotGoBAYPOTU9Y5FIROr1etButw2BXOTU9IOCVqtlCCMLOp0ONJtN
-        QyDXUIEoihKt1mg0DIFc5NT0jOFXl1RVhXq9bgjkIqem7xfQarVazRDI9aiAVqtUKmNxI8sgn5w8IptM
-        QlgQjjR9v0BRFCiXy7pJxGKws7AAe2trI9lyOu/CVutbXhAMBiVarVgs6mZ7cRHSXi/souzA7YbUxgaH
-        numMstjEhPxQUK1WoVAo6CY+Owv/UUSjXFzAocfDUVIpfkZZ1GYrPxTQnebzed3EZ2bg39IS3KXTXKhe
-        X3NobrGEss9W66CgVCpBLpfTDd4xHM/Pw1/81erVFRfTtDIZOF5f59lQAd1rNpvVzdfpafgzNwd7Kyug
-        XF5qetwEC/ZXV3kmWiz9gkAgINHaGQz18gULfrlcUDk95eJb/MsSNNXzc54NFdBHHgfaIDE1xYVdFP5e
-        XuZ0zs74GWWi2dwv8Pl8m4Ig/BiHT3Z79/vkJPx0OEbyDbOw2ZzkBTgW5BXi0Msbxl5/MJnkdyZTfRTv
-        MQsw5sV3n3IYuwfSKCKrnRgSvgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACISURBVEhLYxgFIxD4+vr+pwQDjWCEmIQDABX9gzJJBYyj
+        FhACQ98CkN4hbgEUELQAPfPgtPCmc9Cq287BDiA2iAbxgUyCFjQQa8EtlxD7m87BL2+6BJeAaBAfKIzf
+        AhBAswRvkIEMv+US/B9EQ4UIWwACSJZQ3wcwgGQJBgbJkxUHo2C4AQYGACZOj77mqxi/AAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="DuplicateToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAKHSURBVEhL3ZVLaxNhFIa79xe4d68gCII7BbtwpVUXFQvF
-        hYoVRcEgiNWNBEWKFEFTYoeZJMaYNBdCjGkaizZNRaKkEqsxl5qYSye3Zn7Aa87H16HJTON048IXnt05
-        J5n3GZKh/yvz8/NKNBqFEWiWrxlPJBKB0dAsXzOecDgMRVHQbrcHQjM0y9eMJxQKodPpoNlsqhSLRQ2V
-        SgUej2f3HxAMBtk3rNfrKuvr64jFYroe9BjoJhAIoNVqQZZllUKhwPo2moFufD4fq6VWq6n4ltMYt37A
-        RnNT46Kfv7qZm5tDo9FAtVplvEvlMGH/hNvigsaNHjRDHvk5bdxuN6ulXC4zJr2f8a3cxtNXIfYNr4gJ
-        hJPZHkfboRnyyM9p43K5WC2lUokxIa0gXmzjurCI37U6jprfYMwax62XH5EvVnpcEeSPPPJz2jidTlbN
-        1ut4cmoBz1fbmFos4OKLOE4/ieFZWsE1/xqGH75FYOV7jy+qiTzyc9o4HA5WDb2axB37Es7MJHEh2MCo
-        V8Z57wbG/HXGuPsXjpsjuCEsqc7IH3nk57Sx2Wysmnw+z/i69hPH7vsx/DiBUbGKUUnGOZuMEWEDp2ay
-        OHI3gElnXHVGNZFHfk4bURRZNblcjpHJZLDwfhln70k4cNOJgyYvLoklnHiUwCHTa/iXVlVfBNVEHvk5
-        bQRBUB+XoKVUKgWLxYJkMol9lwUcNnkw8sCLL+kfqqstaIc88nPazM7OKl2wnenpaVitVqTTaey/KsBs
-        j7In2/K0HaqJPPJzutnTZW8/kiSxnww6nM1mVUf90BOTx+7O7tLvZidohmb5mvH0uxkEzfI149FzM4Dd
-        /5V2o+tmB2j2X2Vo6A/1Mia6z9UiswAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABhSURBVEhL7Y1dCoBACIQ9oJ6poxfCBCKZrvTU+sHAss4P
+        DRsiImdHiOcsmcHGA/peFaIx1lQKGGYg5fMBvXvhFGNNWcAWq5j5wCnGh/D9iPWVyj3VgVa5che8qV0+
+        /AWiC4bLmaGSBdahAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="RenameToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAF5SURBVEhL7ZCxisJQEEWD2FgqWIjYiPZ+Rgr9hXSW+gOW
-        i4WdCoKVYQsrIZUW9vYKaiNCEEESUFTEaCHcfTPrCwYeyy5YbJELhxnuTOaGp4UK9T6ZpvkhwBvpPk9/
-        i8zZbIblconVavVrarUaxOeBSj7d48NSZNDgcDgwi8UC2WwW6XSaQ6UvVn0ymQw6nY7vyx1CGbBer3E8
-        HplWq4VyuQzDMNBut31frHKlI+PxGLFYLOBLlAG2beNyuTDFYhGDwQD9fh+lUsn3xSrX8/kMy7Kg63rA
-        lygDNpsNPM/D6XRCIpHAfr+H67qIx+Ps0Uys+kQiEf4J6VOVKAO22y3u9zuGw2HgEDEajXhGPdXr9cpP
-        lEwmA75EGbDb7fB4PFCpVNBoNLgn6vU6qtUq92KV6+124ydKpVIBX6IMcBwHpFwuh/l8zj1pOp0in89z
-        L1aZaDSKQqGAyWTi+6/6MeAvajabfPy1klQBXTLfRa/X+3yeDhXqf0vTvgDYeacvgtH7rAAAAABJRU5E
-        rkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACqSURBVEhL7Y5RCsIwDIbrOWw9gKBX1EdvYIq3UvEKgntL
+        3q3Jlk4ctK7uSdYPAm2a/l9MZYY4T2FKaUwaB/jUYxkhLKogz18LOHhvPR30mqdU0IXjXbaXs7bTlAgk
+        kOfPFmjjgB7jBN0m70oIJYyDb8sTbS3glWunT3nk4zdBDG8393gZHR75kAwEk8MjvWQoAGpWR1xLuMxo
+        +zd6iZb2WEqNvLVDlbljzAuztNd6KsnkWQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ImportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAMFSURBVEhL3ZTNSxRhHMfFq54C8eIh6NIf0KFLhyI6yHQJ
-        zDCoqC5RRGGZGFaUhrUKEQW96Iqg+FKQYiYk6Obbbm2s6+667I47+/7mrrtrYYcQ+ja/Z/ZZnlnNDkuX
-        vvBlZn7z+32+zz4zO2X/lfarrlUtlWhiEGubare2tn6hRBGDWBpSLymbzSKVSiGdTiOTyYCuc7lcwRsb
-        G8xijXqol2Zolq6JpSH1kqiRB6yvr7NBfhTDOJQcj6RgmQwUAqhGLA2pFwtYW1tjjWSCc3MgN9X8ngTe
-        dXow2Opmc2S6RywNqZdEQ4lEAslkUhfEf5Fo5+cwhts8WB75hv6WFdZPc3SPWBpSr0KAGFIclEql2ZYM
-        3ZXhHN9EYPYn+ppXCjO7BhAgFoshHo/vGBSLJDHZ48HwPQVLo99he7sJ14cfMDa6YbzlhLHJgd5mF24e
-        nbC3Sdap5sPzL/JsJolWGY1GCyFikF+OYeTxirpyBYsDWXzqyWLmVQaWwRwsQztYrd+vtZjybCaJVhmJ
-        RFhIcdBghwPG6x5MPY9joiuK94bd/VHtu3PMrA+g7QiHwyykOMjrDKGv1Y7Xl51498CHN60yRm7LGGtX
-        /uiWI3P6ANqKUCjELAbxMEVW3xzDMp6etaK/0YW+qw4M3HCh4+QCDGfm0HVuAU8uWHDl4Ki76ZBp/tqB
-        me48m4kFBAIB5mAwyMwDuQP+ICZ6HTA0LODlxS/ovvQVHadNMJvNsNls8Pv99BYd15B6SbTX1MBdHMZN
-        NdO4A48aTOg8MYuHp6ZhtVpht9vZPWJpSL0k2gYCK4rCLIaJgXQuyzIWp5fReX4G7fXTDO52u9kCiKUh
-        9ZJor2mYB/zNXq8XS1YXxoxWBl9dXWXPi1gaUi+JHiwfpiCfz1ewCCaLdfE+MYilIfWS6CHSKoqHqbaT
-        xR7eRwxiaUhB5eXl9eoz2OSfBdH0Dxc/GXRONbGHmxjEymM11dTU7KmsrKyrqKhoU4/PSnGeUUfMPF4T
-        Faqrq/dWVVXtK8XE2Ab/dyor+w3a1cj880tpFQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACISURBVEhLYxgFgxP4+vr+JwdDtRMGJCmGglELCAJy9JAE
+        SLLgc3nADhCGcokCg8sCcgBVLfDz89Py8fHZZW9vzwIVol4QeXt7qwINfwo0MB4qBAZUsQBouBLQ8EdA
+        OhUqBAdUCSKgIQdABuHCUGXkA3w+IAmQEwckAWQLsHkfWyoaBYMVMDAAAFXLflIZFke2AAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="ExportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAMGSURBVEhL3ZTdS1NhHMcPChFMIYKxm10E3fQPdBESlSb5
-        cjTLxKDsohfBLoouiswyiQghtVLBXvRKfFnOFVoiZiFhqGDlQObUTZ3OzZ29uKCLSOrbfs85z3jOZnUh
-        3fSFL+ec3/P8Pt9nz3N2pP9Ke2LOi1neoolBrCTlbWxs/MQWRQxiqUi95EgkAkVREAwGEQ6HQc/r6+tx
-        R6NRZrFGc2gu9VAvPRNLReol00QeEAqFWCO/imEcSu4dmYTH64sHUI1YKlIvFhAIBNhEMsG5OZCb18sa
-        bbjUOgC70816aYxYKlIvmRr8fj/W1tZ0QfwXieYrPvnQhlujbpxp6cfwhJ2NEUtF6hUPEEMSgziYTGMn
-        Gmyod3zBzXEfilsG0T40ASk1tUBj6iRT8+rqKnw+X1JQRUsfiuttSc6q78P1T1GcHwvjyrgC+ekIDIfL
-        26QDt7dr3LhkWpXX642HiEGF922oGI3g4iam+vE3QZS+DaH8fQgHn41/M11ofiLlVBo1NpNMK11ZWWEh
-        iUEFtb04PRRGQX/wjy56FURZbN6+pg8/dpyqa9DYTDJtx/LyMgtJDMq/Z0VpX+i3zu1RkG9VUPJSwf7G
-        j9+N5x53STnXzBqbSaat8Hg8zGIQ+eyDFzhyx6q5B9k1FmRVd2NvlQ3HLApyOwIo7PIjo3YE6dmXLVLh
-        1XSNGxcLWFxcZF5aWmLmgaJpfGZmBlNTU8is6sDR9lhAmxcZNQOoswzH3qJtRRpTJ5n2emFhIe7EMG6q
-        OZ1O2O12ZN7oROYjFw5VWdFqG2JjxFKResm03wR2u93MYpgYSPdzc3OYnp5GVmUn8qqf4/W7UTgcDrYA
-        YqlIvWTaa2rmAX/z7OwsmroHMTb5mcHn5+fZeRFLReol08HyZgpyuVxxi2CyWBfHiUEsFamXTAdIq0hs
-        ptpmFufwecQglooUlJKSUho7g6/8+yOa/uHit4nu+bco0cQgloZVZTabd6alpZUYDIa7sWvzVqwxSoip
-        4VVRwWQy7TIajbu3YmIkwf+dJOkXQe6hUBv4v94AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAACRSURBVEhLYxgFgxP4+vr+JwdDtRMGJCmGglELCAKaW0AS
+        INWCz+UBR7+U+R+GcgkDUi0AGf6lPOAQlEsY0DWIfHx8VgL5TlAudQCyBd7e3rZAS14CsTNUCANQHAeE
+        LCErDnDg16GhoTxQZdQDIB8ADX+FL5jIBsQYTnIcIAOgwSipCBpUcAwSIzkORgEdAQMDAPKcgID3ixOd
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="DictionaryToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAKpSURBVEhL3ZV7T5JhGMbpM/R3n8L5FfgU/uVQRBFtsdZq
-        sWal0fnsFHWrhatcR8w00Mq1ZhaHOAZyEAEBOUw8MHTMq+d+fF8wZq+0/MtruwZ7D9fvfu73ft9HduTU
-        w7y6j+n4oWg1F3XuxKymnZhtvEy/M8Y+sOMlZhFyrMZ1iwKQdM8g+HFojw0QIPW6i3lfITI7UuNhhD8Z
-        EJwZQGC6H7/MD+CbugfP+ztwvbsFp+kGHG+uwfZKjx8v+vB97LII2Vc8dG1tDcvLy384mUxy039SNptF
-        LBZDKpVCLpfj92xsbODb84sHAyjEarVW7HA44HQ64XK5uEUVi0UUCgWsrKxwOF0z97SnfoBCoUBLSwta
-        W1uhVCrR1tYGj8cjxO8qk8nwyre3t+H1evF19EL9ALvdzquiUJ/Ph0AgAL/fL0RXRdVvbW3BbDbjy5Pz
-        BwGGOcBms1UqV6lUaG9vR0dHB0KhkBBbFT0LahcBZh+fkwaE2MQQgPpO/aZlU9XBYBCRSIS7VouLi7xN
-        RqMRnx+dlQbQOIoPjHpO1VPlarUaGo0GS0tLQmxVBKUpMhjY+zJyRhpAs06j53a7K32ntlCV1Ip4PC7E
-        VkXnaJr0ej2mh05LA/zmh0in0zxc7HtnZyevvru7m6+uVtFolAN0Oh3MBq00wDd1n8/13r5TWxKJBF8Z
-        nasVrYoAVMCHgVPSAO/kXeTzeSwsLCAcDvPqKIAqp3B6g2tF4PX1dTQ3N2Oy/6Q0wD1xG67xm/j59jrs
-        r6/C+vIK+8b0Yn7sEuae9SA4b0K5XBaid0XQzc1NNDU1MUCXJIC+guIFkh4cHKxMFLWxVCqhsbFRPP9f
-        e8cJZjlzr1artRDEYrFALpejoaGBwv9pf/ibKEQETTCPMR9nPlSJu9leH0nJZL8Bsn9yvlxOr78AAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAABBSURBVEhLYxgFgxf4+vr+JwdDtRMGyIqJ1UiUOphLRi0g
+        CEYtIAhGLcAJQIpgGCo0agF2QBcLyMFQ7aNg0AAGBgCNlZut2PG8BgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
