--- a/Language Pad/Dialogs/dlgAbout.resx
+++ b/Language Pad/Dialogs/dlgAbout.resx
@@ -138,6 +138,9 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
    •Tweaked multiple themes      
    •Changed icon theme to Breeze
    •Show/Hide sidebar
+   •Show/Hide toolstrips
+   •Show/Hide statusbar
+   •Full/Minimal mode toggles
    •Dictionary form now respects font dialog color
 Version 8.5 (October 13, 2017)	
    •Help file included   
