--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,6 @@
-Version 9.0 (October 31, 2017)	
+Version 9.0 (October 31, 2017)
+   •Inverted breve and dot below accent marks added to accent palette
+   •Smart replace
    •Redesigned splash screen  
    •Add Space & Breeze theme
    •Default theme now 'Breeze'
@@ -10,7 +12,8 @@ Version 9.0 (October 31, 2017)
    •Show/Hide statusbar
    •Full/Minimal mode toggles
    •Dictionary form now respects font dialog color
-Version 8.5 (October 13, 2017)	
+   •Fixed bug where clicking "New" would sometimes not clear every page
+Version 8.5 (October 13, 2017)
    •Help file included   
    •Minor changes to splash screen
    •Automatically fill in title and description on dictionary HTML generator
